# C-First-Steps

./: CMakeLists.txt  HelloWorld.c  HelloWorld.h  README.md  helloWorld.c  introductions.c  library.h  main.c
Geometric Shapes/: CMakeLists.txt  circle.c  main.c  rectangle.c  shapes.h  square.c
Hello World/: CMakeLists.txt  introductions.c  library.h  main.c
